[package]
name = "monty_carlos"
authors = ["Vladimir Kharchev <necrosovereign@gmail.com>"]
description = "A library for Monte-Carlo simulations"
version = "0.2.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/necrosovereign/monty_carlos"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
statrs = "0.16.0"

[dev-dependencies]
rand_distr = "0.4.3"
